tests/semantic/valid/13_recursion.tc
// 测试13: 递归函数
// 目标：验证递归调用的函数签名处理
int fact(int n) {
    if (n <= 1) {
        return 1;
    }
    return n * fact(n - 1);
}

int main(void) {
    return fact(5);
}
