tests/semantic/invalid/08_invalid_main_params.tc
// ERR_INVALID_MAIN_SIGNATURE: main must have no parameters
int main(int argc) {
    return 0;
}
